--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <a href="main.html" class="logo">
+    <a href="index.html" class="logo">
       <img src="images/CURecyclery_logo.JPG" alt="Logo" style="height: 100px; vertical-align: middle;"/>
       <span style="font-size: 24px; font-weight: bold;">Clemson Recyclery</span>
     </a>
