updated donation guidelines

--- a/donate.html
+++ b/donate.html
@@ -25,14 +25,26 @@
     <p>
       Donations helps keep the Recyclery running strong and encourages a more sustainable Clemson community!
       We take your old bikes and fix them up for others to use and enjoy. If you don't have a bike, but would
-      like to support our mission you can donate funds through the Clemson Donation Page (link the page)
+      like to support our mission you can donate funds.
     </p>
     <h2>Donation Guidelines</h2>
+    <h4>Bikes</h4>
     <p>
-      1. Insert guideline here. <br>
-      2. Insert guideline here. <br>
-      3. Old bike parts, gear, and cycling clothing are also accepted and greatly appreciated. <br>
+      We accept bikes of any condition whether ready to ride or has seen better days. Recycling parts from bikes that 
+      are beyond saving helps us keep our costs down and saves the earth piece by piece! Anything that we can't use we
+       will properly recycle or dispose of.<br>
     </p>
+    <h4>Parts</h4>
+    <p>
+      We accept a ride variety of parts to be donated as well! Brakes, tires, chains, and gears are all great candidates for reuse.
+       Damaged frames, spokes, and old helmets will be properly disposed of as they are inadequate to be reused. <br>
+    </p>
+    <h4>Accessories/Apparel</h4>
+    <p>
+      Need to clean out your closet and bike junk drawer as well? We accept lights, waterbottles, clothing, fenders, commuter bags
+      and more! Damaged or very old helmets however will be disposed of due to safety concerns. <br>
+    </p>
+
   </main>
 
   <footer>
