made main page presentable for publishing now

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
   </header>
 
   <main>
-    <h1>Welcome to Home</h1>
-    <p>This is the main page. Have some sort of instagram interactive embed towards the bottom of this page.</p>
+    <h1>Welcome to the Clemson ReCyclery</h1>
+    <p>The Clemson ReCyclery is a student organization at Clemson University focusing on repairing old bikes
+       and redistributing them to those who need them. This is our information homebase so dive in to what we do,
+      events going on, and your local bike community! </p>
   </main>
 
   <!-- Gallery Section -->
