added thoughts/ideas comment

--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
   </header>
 
   <main>
+    <!--Should these be drop down arrows?-->
     <h1>Our Mission</h1>
     <p>The goal of the Clemson Recyclery is to distribute bikes to those in the Clemson community who
         need them the most and along the way educating others on repairing, maintaining, and riding bikes.
