--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>Welcome to the Clemson ReCyclery</h1>
     <p>The Clemson ReCyclery is a student organization at Clemson University focusing on repairing old bikes
        and redistributing them to those who need them. This is our information homebase so dive in to what we do,
-      events going on, and your local bike community! test</p>
+      events going on, and your local bike community!</p>
   </main>
 
   <!-- Gallery Section -->
